# caen-dim

./: CMakeLists.txt  README.md
client/: CMakeLists.txt
client/src/: main.cpp
dim/dim/: dim.h
dim/linux/: DimBridge  checkDimServers  checkDns  did  dim_get_service  dim_get_service_names  dim_get_services  dim_send_command  testClient  testServer  test_client  test_server  webDid
server/: CMakeLists.txt  test.cpp  usb_test.cpp
server/include/: Caen.hpp  CaenRpc.hpp  caen.hpp
server/src/: Caen.cpp  main.cpp
